@@ -1,3 +1,5 @@
+# -*- coding: utf-8 -*-
+
 from mako.template import Template
 import unittest
 from util import result_lines, flatten_result
@@ -18,6 +20,14 @@ class FilterTest(unittest.TestCase):
             return lambda x: "MYFILTER->%s<-%s" % (x, y)
         assert flatten_result(t.render(x="this is x", myfilter=myfilter, y="this is y")) == "MYFILTER->this is x<-this is y"
 
+    def test_builtin_func(self):
+        t = Template("""
+            ${x | encoding('utf-8')}
+        """)
+        udata = u"""Alors vous imaginez ma surprise, au lever du jour, quand une drôle de petit voix m’a réveillé. Elle disait: « S’il vous plaît… dessine-moi un mouton! »"""
+        utf8data = udata.encode('utf-8')
+        assert flatten_result(t.render_unicode(x=utf8data)) == udata
+        
     def test_def(self):
         t = Template("""
             <%def name="foo()" filter="myfilter">
