@@ -3,8 +3,8 @@ try:
     file_content = open(path)
 except:
     raise "Should never execute here"
-doc_content = ''.join(file_content.readlines()).decode('utf-8')
+doc_content = ''.join(file_content.readlines())
 file_content.close()
 %>
 
-${doc_content}
+${doc_content | encoding('utf-8')}
